--- a/app/src/index.css
+++ b/app/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+#root{
+  position: relative;
+}
+
 
 /* ヘッダ */
 .header{
@@ -29,14 +33,15 @@ code {
   margin-top: 200px;
 }
 
+.login > div{
+  margin-top: 50px;
+}
 
 /* ナビゲーション */
 .Navi{
-  display: inline-block;
   width: 100%;
-}
-.login > div{
-  margin-top: 50px;
+  position: fixed;
+  bottom: 0; /*下に固定*/
 }
 
 /* パーソナルタスク */
